Se actualizón: 	1. Link para abrir url y abra en nueva pestaña 	2. Se agregó una nueva imagen al perfil 	3. Se agregó link para acceder a la página donde se ve los proyectos 	4. Se actualizó información de contacto en pie de página

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="page-wrapper">
 			<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">Juan Pablo Paz Quiroga</a></h1>
+				<h1 id="logo"><a href="index.html" target="_blank">Juan Pablo Paz Quiroga</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
@@ -38,7 +38,7 @@
 						<p>Especializado en desarrollo web y aplicaciones móviles<br />
 						con más de 3 años de experiencia profesional</p>
 					</header>
-					<span class="image"><img src="images/perfil.jpeg" alt="Juan Pablo Paz" /></span>
+					<span class="image"><img src="images/perfil2.png" alt="Juan Pablo Paz" /></span>
 				</div>
 				<a href="#one" class="goto-next scrolly">Next</a>
 			</section>
@@ -98,7 +98,7 @@
 					   • Herramientas: Git, Docker<br/>
 					   • Sistemas Operativos: Windows, Linux</p>
 					<ul class="actions">
-						<li><a href="#" class="button">Ver proyectos</a></li>
+						<li><a href="https://infinitydevlab.com/" class="button" target="_blank">Ver proyectos</a></li>
 					</ul>
 				</div>
 				<a href="#four" class="goto-next scrolly">Next</a>
@@ -167,9 +167,19 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-					<li><a href="mailto:jppq2022@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://wa.me/59179900174" target="_blank" class="icon brands alt fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+					<li><a href="https://wa.me/59170941082" target="_blank" class="icon brands alt fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+					<li><a href="mailto:jppq2026@gmail.com" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/jppq2026" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://gitlab.com/jppq2026" target="_blank" class="icon brands alt fa-gitlab"><span class="label">GitLab</span></a></li>
+				</ul>
+				<ul class="details">
+					<li>- <strong>Email</strong>: <a href="mailto:jppq2026@gmail.com">jppq2026@gmail.com</a></li>
+					<li>- <strong>Teléfono (WhatsApp)</strong>: <a href="https://wa.me/59179900174">79900174</a>, <a href="https://wa.me/59170941082">70941082</a></li>
+					<li>- <strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga">www.linkedin.com/in/juan-pablo-paz-quiroga</a></li>
+					<li>- <strong>GitHub</strong>: <a href="https://github.com/jppq2026">github.com/jppq2026</a></li>
+					<li>- <strong>GitLab</strong>: <a href="https://gitlab.com/jppq2026">gitlab.com/jppq2026</a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Juan Pablo Paz Quiroga. Todos los derechos reservados.</li>
