Se actualizó la información de contacto

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<p>Especializado en desarrollo web y aplicaciones móviles<br />
 						con más de 3 años de experiencia profesional</p>
 					</header>
-					<span class="image"><img src="images/perfil2.png" alt="Juan Pablo Paz" /></span>
+					<span class="image"><img src="images/perfil3.png" alt="Juan Pablo Paz" /></span>
 				</div>
 				<a href="#one" class="goto-next scrolly">Next</a>
 			</section>
@@ -155,9 +155,14 @@
 						<h2>¿Interesado en trabajar juntos?</h2>
 						<p>Contáctame para discutir tu próximo proyecto</p>
 					</header>
-					<form method="post" action="#" class="cta">
+					<form method="post" action="https://formspree.io/f/xvgonklb" class="cta">
 						<div class="row gtr-uniform gtr-50">
-							<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Tu correo electrónico" /></div>
+							<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Tu correo electrónico" required /></div>
+							<div class="col-12">
+								<label>
+									<textarea name="message" id="message" placeholder="Escribe tu mensaje" rows="4"></textarea>
+								</label>
+							</div>
 							<div class="col-4 col-12-xsmall"><input type="submit" value="Contactar" class="fit primary" /></div>
 						</div>
 					</form>
@@ -167,19 +172,19 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://wa.me/59179900174" target="_blank" class="icon brands alt fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-					<li><a href="https://wa.me/59170941082" target="_blank" class="icon brands alt fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-					<li><a href="mailto:jppq2026@gmail.com" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/jppq2026" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://gitlab.com/jppq2026" target="_blank" class="icon brands alt fa-gitlab"><span class="label">GitLab</span></a></li>
+					<li><a href="https://wa.me/59179900174" class="icon brands alt fa-whatsapp" target="_blank"><span class="label">WhatsApp</span></a></li>
+					<li><a href="https://wa.me/59170941082" class="icon brands alt fa-whatsapp" target="_blank"><span class="label">WhatsApp</span></a></li>
+					<li><a href="mailto:jppq2026@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+					<li><a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/jppq2026" class="icon brands alt fa-github"><span class="label" target="_blank">GitHub</span></a></li>
+					<li><a href="https://gitlab.com/jppq2026" class="icon brands alt fa-gitlab"><span class="label" target="_blank">GitLab</span></a></li>
 				</ul>
 				<ul class="details">
-					<li>- <strong>Email</strong>: <a href="mailto:jppq2026@gmail.com">jppq2026@gmail.com</a></li>
-					<li>- <strong>Teléfono (WhatsApp)</strong>: <a href="https://wa.me/59179900174">79900174</a>, <a href="https://wa.me/59170941082">70941082</a></li>
-					<li>- <strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga">www.linkedin.com/in/juan-pablo-paz-quiroga</a></li>
-					<li>- <strong>GitHub</strong>: <a href="https://github.com/jppq2026">github.com/jppq2026</a></li>
-					<li>- <strong>GitLab</strong>: <a href="https://gitlab.com/jppq2026">gitlab.com/jppq2026</a></li>
+					<li>- <strong>Email</strong>: <a href="mailto:jppq2026@gmail.com" target="_blank">jppq2026@gmail.com</a></li>
+					<li>- <strong>Teléfono (WhatsApp)</strong>: <a href="https://wa.me/59179900174" target="_blank">79900174</a>, <a href="https://wa.me/59170941082">70941082</a></li>
+					<li>- <strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga" target="_blank">www.linkedin.com/in/juan-pablo-paz-quiroga</a></li>
+					<li>- <strong>GitHub</strong>: <a href="https://github.com/jppq2026" target="_blank">github.com/jppq2026</a></li>
+					<li>- <strong>GitLab</strong>: <a href="https://gitlab.com/jppq2026" target="_blank">gitlab.com/jppq2026</a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Juan Pablo Paz Quiroga. Todos los derechos reservados.</li>
