--- a/index.html
+++ b/index.html
@@ -1,207 +1,142 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Juan Pablo Paz Quiroga - Desarrollador Full Stack</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload landing">
-		<div id="page-wrapper">
-			<!-- Header -->
-			<header id="header">
-				<h1 id="logo"><a href="index.html" target="_blank">Juan Pablo Paz Quiroga</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Inicio</a></li>
-						<li>
-							<a href="#">Sobre mí</a>
-							<ul>
-								<li><a href="#one">Experiencia</a></li>
-								<li><a href="#two">Habilidades</a></li>
-								<li><a href="#three">Proyectos</a></li>
-								<li><a href="#four">Servicios</a></li>
-							</ul>
-						</li>
-						<li><a href="#four">Servicios</a></li>
-						<li><a href="#five" class="button primary">Contacto</a></li>
-					</ul>
-				</nav>
-			</header>
+---
+layout: default
+title: Inicio - Juan Pablo Paz Quiroga
+---
 
-			<!-- Banner -->
-			<section id="banner">
-				<div class="content">
+<section id="banner">
+	<div class="content">
+		<header>
+			<h2>Desarrollador Full Stack</h2>
+			<p>Especializado en desarrollo web y aplicaciones móviles<br />
+			con más de 3 años de experiencia profesional</p>
+		</header>
+		<span class="image"><img src="images/perfil3.png" alt="Juan Pablo Paz" /></span>
+	</div>
+	<a href="#one" class="goto-next scrolly">Next</a>
+</section>
+
+<!-- One -->
+<section id="one" class="spotlight style1 bottom">
+	<span class="image fit main"><img src="images/Imagen1.jpg" alt="" /></span>
+	<div class="content">
+		<div class="container">
+			<div class="row">
+				<div class="col-4 col-12-medium">
 					<header>
-						<h2>Desarrollador Full Stack</h2>
-						<p>Especializado en desarrollo web y aplicaciones móviles<br />
-						con más de 3 años de experiencia profesional</p>
+						<h2>Sobre mí</h2>
+						<p>Ingeniero de Sistemas apasionado por el desarrollo de software</p>
 					</header>
-					<span class="image"><img src="images/perfil3.png" alt="Juan Pablo Paz" /></span>
 				</div>
-				<a href="#one" class="goto-next scrolly">Next</a>
-			</section>
-
-			<!-- One -->
-			<section id="one" class="spotlight style1 bottom">
-				<span class="image fit main"><img src="images/Imagen1.jpg" alt="" /></span>
-				<div class="content">
-					<div class="container">
-						<div class="row">
-							<div class="col-4 col-12-medium">
-								<header>
-									<h2>Sobre mí</h2>
-									<p>Ingeniero de Sistemas apasionado por el desarrollo de software</p>
-								</header>
-							</div>
-							<div class="col-4 col-12-medium">
-								<p>Soy un desarrollador Full Stack con experiencia en tecnologías web modernas como PHP, Laravel y Vue.js. También tengo experiencia en el desarrollo de aplicaciones móviles con Flutter. Mi formación en Ingeniería de Sistemas me ha proporcionado una base sólida en resolución de problemas y diseño de sistemas.</p>
-							</div>
-							<div class="col-4 col-12-medium">
-								<p>A lo largo de mi carrera, he trabajado en diversos proyectos, desde aplicaciones web empresariales hasta soluciones móviles. Me especializo en crear interfaces intuitivas y funcionales, siempre enfocado en la experiencia del usuario y las mejores prácticas de desarrollo.</p>
-							</div>
-						</div>
-					</div>
+				<div class="col-4 col-12-medium">
+					<p>Soy un desarrollador Full Stack con experiencia en tecnologías web modernas como PHP, Laravel y Vue.js. También tengo experiencia en el desarrollo de aplicaciones móviles con Flutter. Mi formación en Ingeniería de Sistemas me ha proporcionado una base sólida en resolución de problemas y diseño de sistemas.</p>
 				</div>
-				<a href="#two" class="goto-next scrolly">Next</a>
-			</section>
-
-			<!-- Two -->
-			<section id="two" class="spotlight style2 right">
-				<span class="image fit main"><img src="images/Imagen2.jpg" alt="" /></span>
-				<div class="content">
-					<header>
-						<h2>Experiencia Profesional</h2>
-						<p>Trayectoria en desarrollo de software y tecnología</p>
-					</header>
-					<p>Con experiencia en empresas como Gemgloo Soft SA y Servicios Integrales Tecnológicos, he desarrollado soluciones web completas utilizando PHP, Laravel y Vue.js. Mi trabajo incluye tanto el desarrollo frontend como backend, diseño de bases de datos, y implementación de APIs.</p>
-					<ul class="actions">
-						<li><a href="#" class="button">Ver más detalles</a></li>
-					</ul>
+				<div class="col-4 col-12-medium">
+					<p>A lo largo de mi carrera, he trabajado en diversos proyectos, desde aplicaciones web empresariales hasta soluciones móviles. Me especializo en crear interfaces intuitivas y funcionales, siempre enfocado en la experiencia del usuario y las mejores prácticas de desarrollo.</p>
 				</div>
-				<a href="#three" class="goto-next scrolly">Next</a>
-			</section>
-
-			<!-- Three -->
-			<section id="three" class="spotlight style3 left">
-				<span class="image fit main bottom"><img src="images/Imagen3.jpg" alt="" /></span>
-				<div class="content">
-					<header>
-						<h2>Habilidades Técnicas</h2>
-						<p>Tecnologías y herramientas que domino</p>
-					</header>
-					<p>• Desarrollo Web: PHP, Laravel, Vue.js<br/>
-					   • Desarrollo Móvil: Flutter<br/>
-					   • Bases de Datos: MySQL, SQL<br/>
-					   • Frontend: HTML, CSS, JavaScript<br/>
-					   • Herramientas: Git, Docker<br/>
-					   • Sistemas Operativos: Windows, Linux</p>
-					<ul class="actions">
-						<li><a href="https://infinitydevlab.com/" class="button" target="_blank">Ver proyectos</a></li>
-					</ul>
-				</div>
-				<a href="#four" class="goto-next scrolly">Next</a>
-			</section>
-
-			<!-- Four -->
-			<section id="four" class="wrapper style1 special fade-up">
-				<div class="container">
-					<header class="major">
-						<h2>Servicios Profesionales</h2>
-						<p>Soluciones tecnológicas adaptadas a tus necesidades</p>
-					</header>
-					<div class="box alt">
-						<div class="row gtr-uniform">
-							<section class="col-4 col-6-medium col-12-xsmall">
-								<span class="icon solid alt major fa-code"></span>
-								<h3>Desarrollo Web</h3>
-								<p>Creación de aplicaciones web modernas y responsive utilizando las últimas tecnologías.</p>
-							</section>
-							<section class="col-4 col-6-medium col-12-xsmall">
-								<span class="icon solid alt major fa-mobile-alt"></span>
-								<h3>Apps Móviles</h3>
-								<p>Desarrollo de aplicaciones móviles multiplataforma con Flutter.</p>
-							</section>
-							<section class="col-4 col-6-medium col-12-xsmall">
-								<span class="icon solid alt major fa-database"></span>
-								<h3>Base de Datos</h3>
-								<p>Diseño e implementación de bases de datos optimizadas y seguras.</p>
-							</section>
-							<section class="col-4 col-6-medium col-12-xsmall">
-								<span class="icon solid alt major fa-server"></span>
-								<h3>Backend</h3>
-								<p>Desarrollo de APIs y servicios web con Laravel y PHP.</p>
-							</section>
-							<section class="col-4 col-6-medium col-12-xsmall">
-								<span class="icon solid alt major fa-laptop-code"></span>
-								<h3>Frontend</h3>
-								<p>Interfaces de usuario modernas y responsivas con Vue.js.</p>
-							</section>
-							<section class="col-4 col-6-medium col-12-xsmall">
-								<span class="icon solid alt major fa-tools"></span>
-								<h3>Mantenimiento</h3>
-								<p>Soporte técnico y mantenimiento de sistemas existentes.</p>
-							</section>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- Five -->
-			<section id="five" class="wrapper style2 special fade">
-				<div class="container">
-					<header>
-						<h2>¿Interesado en trabajar juntos?</h2>
-						<p>Contáctame para discutir tu próximo proyecto</p>
-					</header>
-					<form method="post" action="https://formspree.io/f/xvgonklb" class="cta">
-						<div class="row gtr-uniform gtr-50">
-							<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Tu correo electrónico" required /></div>
-							<div class="col-12">
-								<label>
-									<textarea name="message" id="message" placeholder="Escribe tu mensaje" rows="4"></textarea>
-								</label>
-							</div>
-							<div class="col-4 col-12-xsmall"><input type="submit" value="Contactar" class="fit primary" /></div>
-						</div>
-					</form>
-				</div>
-			</section>
-
-			<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="https://wa.me/59179900174" class="icon brands alt fa-whatsapp" target="_blank"><span class="label">WhatsApp</span></a></li>
-					<li><a href="https://wa.me/59170941082" class="icon brands alt fa-whatsapp" target="_blank"><span class="label">WhatsApp</span></a></li>
-					<li><a href="mailto:jppq2026@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label">Email</span></a></li>
-					<li><a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/jppq2026" class="icon brands alt fa-github"><span class="label" target="_blank">GitHub</span></a></li>
-					<li><a href="https://gitlab.com/jppq2026" class="icon brands alt fa-gitlab"><span class="label" target="_blank">GitLab</span></a></li>
-				</ul>
-				<ul class="details">
-					<li>- <strong>Email</strong>: <a href="mailto:jppq2026@gmail.com" target="_blank">jppq2026@gmail.com</a></li>
-					<li>- <strong>Teléfono (WhatsApp)</strong>: <a href="https://wa.me/59179900174" target="_blank">79900174</a>, <a href="https://wa.me/59170941082">70941082</a></li>
-					<li>- <strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/juan-pablo-paz-quiroga" target="_blank">www.linkedin.com/in/juan-pablo-paz-quiroga</a></li>
-					<li>- <strong>GitHub</strong>: <a href="https://github.com/jppq2026" target="_blank">github.com/jppq2026</a></li>
-					<li>- <strong>GitLab</strong>: <a href="https://gitlab.com/jppq2026" target="_blank">gitlab.com/jppq2026</a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Juan Pablo Paz Quiroga. Todos los derechos reservados.</li>
-				</ul>
-			</footer>
-
+			</div>
 		</div>
+	</div>
+	<a href="#two" class="goto-next scrolly">Next</a>
+</section>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/jquery.dropotron.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+<!-- Two -->
+<section id="two" class="spotlight style2 right">
+	<span class="image fit main"><img src="images/Imagen2.jpg" alt="" /></span>
+	<div class="content">
+		<header>
+			<h2>Experiencia Profesional</h2>
+			<p>Trayectoria en desarrollo de software y tecnología</p>
+		</header>
+		<p>Con experiencia en empresas como Gemgloo Soft SA y Servicios Integrales Tecnológicos, he desarrollado soluciones web completas utilizando PHP, Laravel y Vue.js. Mi trabajo incluye tanto el desarrollo frontend como backend, diseño de bases de datos, y implementación de APIs.</p>
+		<ul class="actions">
+			<a href="/pages/curriculum-vitae.html" class="button">Ver más detalles</a>
+		</ul>
+	</div>
+	<a href="#three" class="goto-next scrolly">Next</a>
+</section>
 
-	</body>
-</html>
+<!-- Three -->
+<section id="three" class="spotlight style3 left">
+	<span class="image fit main bottom"><img src="images/Imagen3.jpg" alt="" /></span>
+	<div class="content">
+		<header>
+			<h2>Habilidades Técnicas</h2>
+			<p>Tecnologías y herramientas que domino</p>
+		</header>
+		<p>• Desarrollo Web: PHP, Laravel, Vue.js<br/>
+			• Desarrollo Móvil: Flutter<br/>
+			• Bases de Datos: MySQL, SQL<br/>
+			• Frontend: HTML, CSS, JavaScript<br/>
+			• Herramientas: Git, Docker<br/>
+			• Sistemas Operativos: Windows, Linux</p>
+		<ul class="actions">
+			<li><a href="https://infinitydevlab.com/" class="button" target="_blank">Ver proyectos</a></li>
+		</ul>
+	</div>
+	<a href="#four" class="goto-next scrolly">Next</a>
+</section>
+
+<!-- Four -->
+<section id="four" class="wrapper style1 special fade-up">
+	<div class="container">
+		<header class="major">
+			<h2>Servicios Profesionales</h2>
+			<p>Soluciones tecnológicas adaptadas a tus necesidades</p>
+		</header>
+		<div class="box alt">
+			<div class="row gtr-uniform">
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-code"></span>
+					<h3>Desarrollo Web</h3>
+					<p>Creación de aplicaciones web modernas y responsive utilizando las últimas tecnologías.</p>
+				</section>
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-mobile-alt"></span>
+					<h3>Apps Móviles</h3>
+					<p>Desarrollo de aplicaciones móviles multiplataforma con Flutter.</p>
+				</section>
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-database"></span>
+					<h3>Base de Datos</h3>
+					<p>Diseño e implementación de bases de datos optimizadas y seguras.</p>
+				</section>
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-server"></span>
+					<h3>Backend</h3>
+					<p>Desarrollo de APIs y servicios web con Laravel y PHP.</p>
+				</section>
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-laptop-code"></span>
+					<h3>Frontend</h3>
+					<p>Interfaces de usuario modernas y responsivas con Vue.js.</p>
+				</section>
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-tools"></span>
+					<h3>Mantenimiento</h3>
+					<p>Soporte técnico y mantenimiento de sistemas existentes.</p>
+				</section>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- Five -->
+<section id="five" class="wrapper style2 special fade">
+	<div class="container">
+		<header>
+			<h2>¿Interesado en trabajar juntos?</h2>
+			<p>Contáctame para discutir tu próximo proyecto</p>
+		</header>
+		<form method="post" action="https://formspree.io/f/mldekjvr" class="cta">
+			<div class="row gtr-uniform gtr-50">
+				<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Tu correo electrónico" required /></div>
+				<div class="col-12">
+					<label>
+						<textarea name="message" id="message" placeholder="Escribe tu mensaje" rows="4"></textarea>
+					</label>
+				</div>
+				<div class="col-4 col-12-xsmall"><input type="submit" value="Contactar" class="fit primary" /></div>
+			</div>
+		</form>
+	</div>
+</section>
