Se mejoraron las url y los acceso y se corrigieron algunos enlaces que estaba dirigiendo mal

--- a/pages/curriculum-vitae.html
+++ b/pages/curriculum-vitae.html
@@ -14,12 +14,14 @@ title: Curriculum Vitae
             height="600px" 
             style="border: none;">
       Tu navegador no soporta la visualización de PDFs. 
-      <a href="/assets/doc/jppq-cv.pdf">Descarga el currículum aquí.</a>
     </iframe>
   </div>
 
   <!-- Botón para regresar a la página principal -->
-  <div style="text-align: center; margin-top: 20px;">
-    <a href="/" class="button primary">Volver a la página principal</a>
+  <div style="display: flex; justify-content: center; gap: 15px; margin-top: 20px; margin-bottom: 20px;">
+    <a href="/" class="button primary" style="background-color: #e74c3c; color: white; text-decoration: none; border-radius: 5px;">Volver Principal</a>
+    <a href="/assets/doc/jppq-cv.pdf" download class="button secondary" style="background-color: #27ae60; color: white; text-decoration: none; border-radius: 5px;">
+      Descargar PDF
+    </a>
   </div>
 </section>
