--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ title: Inicio - Juan Pablo Paz Quiroga
 		</header>
 		<span class="image"><img src="images/perfil3.png" alt="Juan Pablo Paz" /></span>
 	</div>
-	<a href="#one" class="goto-next scrolly">Next</a>
+	<a href="#sobre-mi" class="goto-next scrolly">Next</a>
 </section>
 
 <!-- One -->
-<section id="one" class="spotlight style1 bottom">
+<section id="sobre-mi" class="spotlight style1 bottom">
 	<span class="image fit main"><img src="images/Imagen1.jpg" alt="" /></span>
 	<div class="content">
 		<div class="container">
@@ -36,11 +36,11 @@ title: Inicio - Juan Pablo Paz Quiroga
 			</div>
 		</div>
 	</div>
-	<a href="#two" class="goto-next scrolly">Next</a>
+	<a href="#experiencia" class="goto-next scrolly">Next</a>
 </section>
 
 <!-- Two -->
-<section id="two" class="spotlight style2 right">
+<section id="experiencia" class="spotlight style2 right">
 	<span class="image fit main"><img src="images/Imagen2.jpg" alt="" /></span>
 	<div class="content">
 		<header>
@@ -49,14 +49,14 @@ title: Inicio - Juan Pablo Paz Quiroga
 		</header>
 		<p>Con experiencia en empresas como Gemgloo Soft SA y Servicios Integrales Tecnológicos, he desarrollado soluciones web completas utilizando PHP, Laravel y Vue.js. Mi trabajo incluye tanto el desarrollo frontend como backend, diseño de bases de datos, y implementación de APIs.</p>
 		<ul class="actions">
-			<a href="/pages/curriculum-vitae.html" class="button">Ver más detalles</a>
+			<a href="/pages/curriculum-vitae.html" class="button">Ver Curriculum Vitae</a>
 		</ul>
 	</div>
-	<a href="#three" class="goto-next scrolly">Next</a>
+	<a href="#habilidades" class="goto-next scrolly">Next</a>
 </section>
 
 <!-- Three -->
-<section id="three" class="spotlight style3 left">
+<section id="habilidades" class="spotlight style3 left">
 	<span class="image fit main bottom"><img src="images/Imagen3.jpg" alt="" /></span>
 	<div class="content">
 		<header>
@@ -73,11 +73,11 @@ title: Inicio - Juan Pablo Paz Quiroga
 			<li><a href="https://infinitydevlab.com/" class="button" target="_blank">Ver proyectos</a></li>
 		</ul>
 	</div>
-	<a href="#four" class="goto-next scrolly">Next</a>
+	<a href="#servicios" class="goto-next scrolly">Next</a>
 </section>
 
-<!-- Four -->
-<section id="four" class="wrapper style1 special fade-up">
+<!-- servicios -->
+<section id="servicios" class="wrapper style1 special fade-up">
 	<div class="container">
 		<header class="major">
 			<h2>Servicios Profesionales</h2>
@@ -120,8 +120,8 @@ title: Inicio - Juan Pablo Paz Quiroga
 	</div>
 </section>
 
-<!-- Five -->
-<section id="five" class="wrapper style2 special fade">
+<!-- contacto -->
+<section id="contacto" class="wrapper style2 special fade">
 	<div class="container">
 		<header>
 			<h2>¿Interesado en trabajar juntos?</h2>
