--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ title: Inicio - Juan Pablo Paz Quiroga
 			• Herramientas: Git, Docker<br/>
 			• Sistemas Operativos: Windows, Linux</p>
 		<ul class="actions">
-			<li><a href="https://infinitydevlab.com/" class="button" target="_blank">Ver proyectos</a></li>
+			<li><a href="https://jppq2026.infinitydevlab.com/" class="button" target="_blank">Ver proyectos</a></li>
 		</ul>
 	</div>
 	<a href="#servicios" class="goto-next scrolly">Next</a>
