--- a/backup-index.html
+++ b/backup-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Juan Pablo Paz Quiroga - Desarrollador Full Stack</title>
+		<title>Juan Pablo Paz Quiroga - Desarrollador Backend</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,9 +34,9 @@
 			<section id="banner">
 				<div class="content">
 					<header>
-						<h2>Desarrollador Full Stack</h2>
-						<p>Especializado en desarrollo web y aplicaciones móviles<br />
-						con más de 3 años de experiencia profesional</p>
+						<h2>Desarrollador Backend</h2>
+						<p>Especializado en desarrollo web<br />
+						con más de 5 años de experiencia profesional</p>
 					</header>
 					<span class="image"><img src="images/perfil3.png" alt="Juan Pablo Paz" /></span>
 				</div>
@@ -56,10 +56,10 @@
 								</header>
 							</div>
 							<div class="col-4 col-12-medium">
-								<p>Soy un desarrollador Full Stack con experiencia en tecnologías web modernas como PHP, Laravel y Vue.js. También tengo experiencia en el desarrollo de aplicaciones móviles con Flutter. Mi formación en Ingeniería de Sistemas me ha proporcionado una base sólida en resolución de problemas y diseño de sistemas.</p>
+								<p>Soy un desarrollador especializado en el Backend anteriormente trabaje como desarrollador Fullstack y en los inicios como desarrollador frontend con experiencia en tecnologías como JAVA, Kotlin, springboot, restfull API's, y otras tecnologías web como PHP, Laravel y Vue.js, Angular y React. También tengo experiencia en el desarrollo de aplicaciones móviles con Flutter y conociminetos en python y c#. Mi formación en Ingeniería de Sistemas me ha proporcionado una base sólida en resolución de problemas y diseño de sistemas.</p>
 							</div>
 							<div class="col-4 col-12-medium">
-								<p>A lo largo de mi carrera, he trabajado en diversos proyectos, desde aplicaciones web empresariales hasta soluciones móviles. Me especializo en crear interfaces intuitivas y funcionales, siempre enfocado en la experiencia del usuario y las mejores prácticas de desarrollo.</p>
+								<p>A lo largo de mi carrera, he trabajado en diversos proyectos, desde aplicaciones web empresariales, ERP, sistemas personalizados, soluciones móviles y sistemas de seguridad como ser firmas digitales y validación de identidad. Me especializo en crear interfaces intuitivas y funcionales, siempre enfocado en la experiencia del usuario y las mejores prácticas de desarrollo.</p>
 							</div>
 						</div>
 					</div>
@@ -75,7 +75,7 @@
 						<h2>Experiencia Profesional</h2>
 						<p>Trayectoria en desarrollo de software y tecnología</p>
 					</header>
-					<p>Con experiencia en empresas como Gemgloo Soft SA y Servicios Integrales Tecnológicos, he desarrollado soluciones web completas utilizando PHP, Laravel y Vue.js. Mi trabajo incluye tanto el desarrollo frontend como backend, diseño de bases de datos, y implementación de APIs.</p>
+					<p>Con experiencia en empresas como Gemgloo Soft SA y Servicios Integrales Tecnológicos y DIGICER S.R.L., he desarrollado soluciones web completas en JAVA, Kotlin, Angular, también utilizando PHP, Laravel y Vue.js. Mi trabajo incluye tanto el desarrollo frontend como backend, diseño de bases de datos, y implementación de APIs.</p>
 					<ul class="actions">
 						<li><a href="#" class="button">Ver más detalles</a></li>
 					</ul>
@@ -91,7 +91,8 @@
 						<h2>Habilidades Técnicas</h2>
 						<p>Tecnologías y herramientas que domino</p>
 					</header>
-					<p>• Desarrollo Web: PHP, Laravel, Vue.js<br/>
+					<p>• Sistemas: JAVA, Kotlin, Angular<br/>
+					   • Desarrollo Web: PHP, Laravel, Vue.js<br/>
 					   • Desarrollo Móvil: Flutter<br/>
 					   • Bases de Datos: MySQL, SQL<br/>
 					   • Frontend: HTML, CSS, JavaScript<br/>
@@ -136,7 +137,7 @@
 							<section class="col-4 col-6-medium col-12-xsmall">
 								<span class="icon solid alt major fa-laptop-code"></span>
 								<h3>Frontend</h3>
-								<p>Interfaces de usuario modernas y responsivas con Vue.js.</p>
+								<p>Interfaces de usuario modernas y responsivas con Vue.js y Angular.</p>
 							</section>
 							<section class="col-4 col-6-medium col-12-xsmall">
 								<span class="icon solid alt major fa-tools"></span>
