--- a/backup-index.html
+++ b/backup-index.html
@@ -11,7 +11,7 @@
 		<div id="page-wrapper">
 			<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html" target="_blank">Juan Pablo Paz Quiroga</a></h1>
+				<h1 id="logo"><a href="https://infinitydevlab.com/" target="_blank">Juan Pablo Paz Quiroga</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
